--- a/index.html
+++ b/index.html
@@ -2,370 +2,236 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>The Noori Styles - Product Categories</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Product Website</title>
   <style>
-    :root {
-      --primary-color: #f499c1;
-      --primary-color-dark: #b35c85;
-      --primary-color-light: #fff0f6;
-      --primary-color-alt: #b3a2ce;
-      --background-color: white;
-      --text-color: #4b3a57;
-    }
     body {
+      font-family: "Poppins", sans-serif;
       margin: 0;
       padding: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: var(--background-color);
-      color: var(--text-color);
+      background-color: #f9f9f9;
+      color: #333;
     }
     header {
-      background: var(--primary-color);
+      background-color: #ff6f61;
       color: white;
+      padding: 1rem;
       text-align: center;
-      padding: 2rem 1rem;
-      font-size: 2rem;
+      font-size: 1.5rem;
       font-weight: bold;
     }
-    #themeChanger {
-      max-width: 960px;
-      margin: 1rem auto;
-      padding: 0 1rem;
+    .controls {
       display: flex;
       gap: 1rem;
       justify-content: center;
+      margin: 1rem;
       flex-wrap: wrap;
     }
-    #themeChanger label {
-      font-weight: bold;
-      display: block;
-      margin-bottom: 0.3rem;
+    .controls select, .controls button {
+      padding: 0.5rem 1rem;
+      border: none;
+      border-radius: 6px;
+      font-size: 1rem;
+      cursor: pointer;
     }
-    #themeChanger div {
-      min-width: 130px;
-    }
-    #themeChanger input[type="color"] {
-      width: 100%;
-      height: 40px;
-      border-radius: 8px;
+    .controls select {
+      background-color: #fff;
       border: 1px solid #ccc;
-      cursor: pointer;
     }
-    #applyThemeBtn {
-      background: var(--primary-color-alt);
-      color: white;
-      border: none;
-      padding: 0.7rem 1.5rem;
-      border-radius: 10px;
-      font-weight: bold;
-      cursor: pointer;
-      align-self: center;
-      height: 40px;
-      margin-top: 1.6rem;
+    .controls button {
+      background-color: #333;
+      color: #fff;
     }
-    #applyThemeBtn:hover {
-      background: var(--primary-color-dark);
-    }
-    main {
-      max-width: 960px;
-      margin: 2rem auto;
-      padding: 0 1rem;
-    }
-    .section {
-      margin-bottom: 3rem;
-      border: 2px solid var(--primary-color);
-      border-radius: 12px;
-      background: var(--primary-color-light);
+    .form-section {
+      margin: 1rem auto;
       padding: 1rem;
-      position: relative;
+      background: #fff;
+      border-radius: 10px;
+      width: 90%;
+      max-width: 500px;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.1);
     }
-    .section-title {
-      font-size: 1.5rem;
-      font-weight: bold;
-      color: var(--primary-color-dark);
-      margin-bottom: 1rem;
-      cursor: text;
+    .form-section input, .form-section textarea {
+      width: 100%;
+      margin: 0.5rem 0;
+      padding: 0.6rem;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 1rem;
     }
-    .delete-section-btn {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      background: #ff4d6d;
+    .form-section button {
+      background: #ff6f61;
+      color: #fff;
+      padding: 0.6rem;
+      width: 100%;
       border: none;
-      color: white;
-      padding: 6px 10px;
-      border-radius: 8px;
+      border-radius: 6px;
       cursor: pointer;
-      font-size: 0.9rem;
+      font-size: 1rem;
+    }
+    .category {
+      margin: 2rem auto;
+      padding: 1rem;
+      width: 95%;
+      max-width: 1200px;
+    }
+    .category h2 {
+      border-bottom: 2px solid #ff6f61;
+      padding-bottom: 0.5rem;
+      color: #ff6f61;
     }
     .products {
       display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 1.2rem;
-    }
-    @media (min-width: 768px) {
-      .products {
-        grid-template-columns: repeat(4, 1fr);
-      }
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 1rem;
+      margin-top: 1rem;
     }
     .product {
-      background: var(--primary-color-alt);
-      border-radius: 12px;
+      background: #fff;
       padding: 1rem;
-      box-shadow: 0 0 10px rgba(179, 162, 206, 0.4);
-      color: white;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
       text-align: center;
-      position: relative;
     }
     .product img {
       max-width: 100%;
-      border-radius: 12px;
-      margin-bottom: 0.5rem;
+      height: 150px;
+      object-fit: cover;
+      border-radius: 8px;
     }
-    .price {
-      color: white;
-      font-weight: bold;
-      margin-top: 0.3rem;
+    .product h3 {
+      margin: 0.5rem 0;
     }
-    .delete-btn {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      background: #ff4d6d;
-      border: none;
-      color: white;
-      padding: 4px 8px;
-      border-radius: 6px;
-      cursor: pointer;
-      font-size: 0.8rem;
-    }
-    form {
-      margin: 1rem 0;
-    }
-    form input, form textarea {
-      width: 100%;
-      padding: 0.4rem;
-      margin-bottom: 0.5rem;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      font-size: 1rem;
-      color: var(--text-color);
-      background: white;
-    }
-    form button {
-      background: var(--primary-color);
-      border: none;
-      padding: 0.6rem 1.2rem;
-      border-radius: 20px;
-      color: white;
-      font-weight: bold;
-      cursor: pointer;
-      width: 100%;
-    }
-    form button:hover {
-      background: var(--primary-color-dark);
-    }
-    #addSectionBtn {
-      display: block;
+    .reset-btn {
       margin: 2rem auto;
-      background: var(--primary-color-alt);
+      display: block;
+      background: red;
       color: white;
+      padding: 0.8rem 1.2rem;
       border: none;
-      padding: 0.8rem 1.5rem;
-      font-size: 1.1rem;
-      border-radius: 10px;
+      border-radius: 6px;
       cursor: pointer;
-    }
-    #addSectionBtn:hover {
-      background: var(--primary-color-dark);
-    }
-    footer {
-      text-align: center;
-      font-size: 0.9rem;
-      margin-top: 3rem;
-      padding-bottom: 1rem;
-      color: #999;
+      font-size: 1rem;
     }
   </style>
 </head>
 <body>
-  <header>The Noori Styles</header>
+  <header>My Product Website</header>
 
-  <div id="themeChanger">
-    <div>
-      <label for="primaryColorInput">Primary Color</label>
-      <input id="primaryColorInput" type="color" value="#f499c1" />
-    </div>
-    <div>
-      <label for="backgroundColorInput">Background</label>
-      <input id="backgroundColorInput" type="color" value="#ffffff" />
-    </div>
-    <div>
-      <label for="textColorInput">Text Color</label>
-      <input id="textColorInput" type="color" value="#4b3a57" />
-    </div>
-    <button id="applyThemeBtn">Apply Theme</button>
+  <div class="controls">
+    <select id="categorySelect"></select>
+    <button onclick="showForm()">Add Product</button>
+    <button onclick="addCategory()">Add Category</button>
   </div>
 
-  <main>
-    <button id="addSectionBtn">+ Add New Section</button>
-    <div id="sections"></div>
-  </main>
-  <footer>© 2025 The Noori Styles</footer>
+  <div id="formContainer" class="form-section" style="display:none;">
+    <input type="text" id="productName" placeholder="Product Name" required>
+    <input type="number" id="productPrice" placeholder="Price (PKR)" required>
+    <textarea id="productDesc" placeholder="Description (Optional)"></textarea>
+    <input type="file" id="productImage" accept="image/*">
+    <button onclick="saveProduct()">Save Product</button>
+  </div>
+
+  <div id="categoriesContainer"></div>
+  <button class="reset-btn" onclick="resetWebsite()">Reset Website</button>
 
   <script>
-    let categories = JSON.parse(localStorage.getItem('categories') || '[]');
-    const root = document.documentElement;
+    let categories = JSON.parse(localStorage.getItem("categories")) || [];
+    renderCategories();
 
-    function saveCategories() {
-      localStorage.setItem('categories', JSON.stringify(categories));
-    }
-
-    function createSection(name = "New Section") {
-      categories.push({ id: Date.now(), name, products: [] });
-      saveCategories();
-      renderSections();
-    }
-
-    function deleteSection(id) {
-      if (confirm("Delete this section?")) {
-        categories = categories.filter(c => c.id !== id);
-        saveCategories();
-        renderSections();
+    function addCategory() {
+      let name = prompt("Enter category name:");
+      if (name && !categories.find(c => c.name === name)) {
+        categories.push({ name, products: [] });
+        saveData();
+        renderCategories();
       }
     }
 
-    function addProduct(categoryId, product) {
-      const cat = categories.find(c => c.id === categoryId);
-      if (cat) {
-        cat.products.push(product);
-        saveCategories();
-        renderSections();
-      }
+    function showForm() {
+      document.getElementById("formContainer").style.display = "block";
     }
 
-    function deleteProduct(categoryId, productId) {
-      const cat = categories.find(c => c.id === categoryId);
-      if (cat) {
-        cat.products = cat.products.filter(p => p.id !== productId);
-        saveCategories();
-        renderSections();
+    function saveProduct() {
+      let name = document.getElementById("productName").value;
+      let price = document.getElementById("productPrice").value;
+      let desc = document.getElementById("productDesc").value;
+      let imageInput = document.getElementById("productImage");
+
+      if (!name || !price) {
+        alert("Name and Price are required!");
+        return;
       }
-    }
 
-    function renderSections() {
-      const container = document.getElementById('sections');
-      container.innerHTML = '';
-      categories.forEach(category => {
-        const section = document.createElement('div');
-        section.className = 'section';
-
-        const title = document.createElement('div');
-        title.className = 'section-title';
-        title.contentEditable = true;
-        title.textContent = category.name;
-        title.onblur = () => {
-          category.name = title.textContent.trim() || "Untitled Section";
-          saveCategories();
-        };
-
-        const delBtn = document.createElement('button');
-        delBtn.className = 'delete-section-btn';
-        delBtn.textContent = 'Delete Section';
-        delBtn.onclick = () => deleteSection(category.id);
-
-        section.appendChild(title);
-        section.appendChild(delBtn);
-
-        // Product form
-        const form = document.createElement('form');
-        form.innerHTML = `
-          <input type="text" name="pname" placeholder="Product Name" required />
-          <input type="number" name="pprice" placeholder="Price (PKR)" required min="0" />
-          <input type="file" name="pimage" accept="image/*" required />
-          <textarea name="pdesc" placeholder="Description (optional)" rows="2"></textarea>
-          <button type="submit">Add Product</button>
-        `;
-        form.onsubmit = e => {
-          e.preventDefault();
-          const nameInput = form.querySelector('[name="pname"]');
-          const priceInput = form.querySelector('[name="pprice"]');
-          const fileInput = form.querySelector('[name="pimage"]');
-          const descInput = form.querySelector('[name="pdesc"]');
-
-          if (!fileInput.files[0]) return;
-
-          const reader = new FileReader();
-          reader.onload = () => {
-            const product = {
-              id: Date.now(),
-              name: nameInput.value,
-              price: priceInput.value,
-              description: descInput.value || "",
-              image: reader.result
-            };
-            addProduct(category.id, product);
-            form.reset();
-          };
-          reader.readAsDataURL(fileInput.files[0]);
-        };
-        section.appendChild(form);
-
-        // Products display
-        const productsDiv = document.createElement('div');
-        productsDiv.className = 'products';
-        category.products.forEach(product => {
-          const div = document.createElement('div');
-          div.className = 'product';
-          div.innerHTML = `
-            <img src="${product.image}" alt="${product.name}" />
-            <h3>${product.name}</h3>
-            ${product.description ? `<p>${product.description}</p>` : ""}
-            <div class="price">PKR ${product.price}</div>
-          `;
-
-          const del = document.createElement('button');
-          del.textContent = "Delete";
-          del.className = "delete-btn";
-          del.onclick = () => deleteProduct(category.id, product.id);
-
-          div.appendChild(del);
-          productsDiv.appendChild(div);
+      let category = document.getElementById("categorySelect").value;
+      let reader = new FileReader();
+      reader.onload = function(e) {
+        let imgData = e.target.result;
+        categories.find(c => c.name === category).products.push({
+          name, price, desc, image: imgData
         });
+        saveData();
+        renderCategories();
+        document.getElementById("formContainer").style.display = "none";
+        document.getElementById("productName").value = "";
+        document.getElementById("productPrice").value = "";
+        document.getElementById("productDesc").value = "";
+        document.getElementById("productImage").value = "";
+      };
+      if (imageInput.files[0]) {
+        reader.readAsDataURL(imageInput.files[0]);
+      } else {
+        categories.find(c => c.name === category).products.push({
+          name, price, desc, image: ""
+        });
+        saveData();
+        renderCategories();
+        document.getElementById("formContainer").style.display = "none";
+      }
+    }
 
-        section.appendChild(productsDiv);
+    function renderCategories() {
+      let container = document.getElementById("categoriesContainer");
+      let select = document.getElementById("categorySelect");
+      container.innerHTML = "";
+      select.innerHTML = "";
+
+      categories.forEach(cat => {
+        let section = document.createElement("div");
+        section.className = "category";
+        section.innerHTML = `<h2>${cat.name}</h2><div class="products"></div>`;
+        let productsContainer = section.querySelector(".products");
+        cat.products.forEach(p => {
+          let div = document.createElement("div");
+          div.className = "product";
+          div.innerHTML = `
+            ${p.image ? `<img src="${p.image}" alt="${p.name}">` : ""}
+            <h3>${p.name}</h3>
+            <p><b>Price:</b> PKR ${p.price}</p>
+            ${p.desc ? `<p>${p.desc}</p>` : ""}
+          `;
+          productsContainer.appendChild(div);
+        });
         container.appendChild(section);
+
+        let option = document.createElement("option");
+        option.value = cat.name;
+        option.textContent = cat.name;
+        select.appendChild(option);
       });
     }
 
-    // Theme controls
-    function setColors(primary, background, text) {
-      root.style.setProperty('--primary-color', primary);
-      root.style.setProperty('--background-color', background);
-      root.style.setProperty('--text-color', text);
-      localStorage.setItem('primaryColor', primary);
-      localStorage.setItem('backgroundColor', background);
-      localStorage.setItem('textColor', text);
+    function saveData() {
+      localStorage.setItem("categories", JSON.stringify(categories));
     }
 
-    document.getElementById('applyThemeBtn').onclick = () => {
-      const primary = document.getElementById('primaryColorInput').value;
-      const background = document.getElementById('backgroundColorInput').value;
-      const text = document.getElementById('textColorInput').value;
-      setColors(primary, background, text);
-    };
-
-    document.getElementById('addSectionBtn').onclick = () => createSection();
-
-    window.onload = () => {
-      // Load theme
-      const p = localStorage.getItem('primaryColor') || '#f499c1';
-      const b = localStorage.getItem('backgroundColor') || '#ffffff';
-      const t = localStorage.getItem('textColor') || '#4b3a57';
-      setColors(p, b, t);
-      renderSections();
-    };
+    function resetWebsite() {
+      if (confirm("Are you sure? This will remove all categories and products.")) {
+        localStorage.removeItem("categories");
+        categories = [];
+        renderCategories();
+      }
+    }
   </script>
 </body>
 </html>
